--- a/modules/CollapsibleSections.less
+++ b/modules/CollapsibleSections.less
@@ -4,10 +4,11 @@
 	&:before {
 		content: '';
 		display: inline-block;
-		width: 18px;
-		height: 18px;
+		width: 24px;
+		height: 24px;
 		/* stylelint-disable-next-line function-url-quotes */
-		background: transparent /* @embed */ url( '../assets/caret.svg' ) center center no-repeat;
+		background: transparent url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' xml:space='preserve' viewBox='0 0 16 16'%3e%3cg fill='%23000'%3e%3cpath d='M9.586 8 6.05 11.536l.707.707L11 8 6.757 3.757l-.707.707z'/%3e%3c/g%3e%3c/svg%3e") center center no-repeat;
+		background-size: 24px 24px !important;
 		transform: rotate( 0deg );
 		margin-right: 4px;
 		transition: transform 0.15s linear;
